added the function of signing in with twitter

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,4 +37,5 @@ block content
         }}(document, 'script', 'twitter-wjs');
 
 
-   P Tweet Summary
+   P Sign in with Twitter
+       input(type='image', src='/images/sign-in-with-twitter-gray.png', onclick="location.href='/signintwitter/step1'")
